--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "nodemon": "nodemon server/server.js --exec babel-node",
     "test": "export NODE_ENV=test && mocha --compilers js:babel-register server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'",
-    "routes": "babel-node server/api/console/cli-routes.js"
+    "routes": "babel-node server/api/console/cli-routes.js",
+    "seed": "babel-node server/db/seeds/seeder.js"
   },
   "engines": {
     "node": "9.11.1"
@@ -40,6 +41,7 @@
     "babel-register": "^6.26.0",
     "cli-table": "^0.3.1",
     "expect": "^22.4.3",
+    "faker": "^4.1.0",
     "mocha": "^5.0.5",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
