--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-rate-limit": "^2.11.0",
+    "express-validator": "^5.1.2",
+    "geojson": "^0.5.0",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
-    "moment": "^2.22.0",
+    "moment": "^2.22.1",
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14",
     "mongoose-findorcreate": "^3.0.0",
+    "mongoose-unique-validator": "^2.0.1",
+    "node-dbf": "^0.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
