--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-rate-limit": "^2.11.0",
+    "geolib": "^2.0.24",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
