--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^2.11.0",
     "express-validator": "^5.1.2",
     "geojson": "^0.5.0",
+    "geolib": "^2.0.24",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
