--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14",
     "mongoose-findorcreate": "^3.0.0",
+    "mongoose-geojson-schema": "^2.1.2",
     "mongoose-unique-validator": "^2.0.1",
     "node-dbf": "^0.3.0",
     "passport": "^0.4.0",
