--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "geojson": "^0.5.0",
     "geojson-coords": "0.0.0",
     "geolib": "^2.0.24",
+    "geopoint": "^1.0.1",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
