--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-findorcreate": "^3.0.0",
     "mongoose-geojson-schema": "^2.1.2",
     "mongoose-unique-validator": "^2.0.1",
+    "numeral": "^2.0.6",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
